fix spacing

--- a/main.css
+++ b/main.css
@@ -464,7 +464,7 @@ textarea {
 }
 
 .footer {
-  margin-top: 12em;
+  margin-top: 10em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -472,8 +472,8 @@ textarea {
 }
 
 .footer-menu {
-  margin: 16px 0;
-  width: 50%;
+  margin: 25px 0 45px;
+  width: 45%;
   display: flex;
   flex-direction: row;
   align-items: center;
